--- a/index.html
+++ b/index.html
@@ -17,39 +17,39 @@
             <div class="container">
             <div class="row">
                 <div class="col-4 text-center">
-                    <label id="product1"> Miami </label>
-                    <img src="2.jpeg " style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
-                    <label for="product1" id="price1">270.00</label>
+                    <label id="product1"> Casio MTP-V001D-7B Silver Stainless </label>
+                    <img src="watch1.jpg " style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
+                    <label for="product1" id="price1">1,200.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                        <label id="product2"> Charlotte </label>
-                        <img src="3.jpeg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product2" id="price2">370.00</label>
+                        <label id="product2">Casio MTP-V001GL-1B Brown Leather </label>
+                        <img src="watch2.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product2" id="price2">1,200.00</label>
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
                <div class="col-4 text-center">
-                        <label id="product3"> Spurs  </label>
-                        <img src="4.jpeg " style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product3" id="price3">330.00</label>
+                        <label id="product3"> Casio MTP-V001L-7B Black Leather   </label>
+                        <img src="watch3.jpg " style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product3" id="price3">1,000.00</label>
                         <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
                 </div>
                <div class="col-4 text-center">
-                        <label id="product4"> Golden state warriors  </label>
-                        <img src=" 5.jpeg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product4" id="price4">370.00</label>
+                        <label id="product4"> Casio Digital Illuminator  </label>
+                        <img src=" watch4.webp" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product4" id="price4">2,000.00</label>
                         <input type="number" class="form-control" id="qty4" placeholder="Enter quantity"/><br>
                 </div>
                <div class="col-4 text-center">
-                        <label id="product5"> Lakers  </label>
-                        <img src="6.jpeg " style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product5" id="price5">350.00</label>
+                        <label id="product5"> Casio Analog Silver Metal   </label>
+                        <img src="watch5.webp " style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product5" id="price5">3,000.00</label>
                         <input type="number" class="form-control" id="qty5" placeholder="Enter quantity"/><br>
                 </div>
                <div class="col-4 text-center">
-                        <label id="product6"> Dallas </label>
-                        <img src="7.jpeg " style="width:500px;height: 300px;" class="img-thumbnail"/><br>
-                        <label for="product6" id="price6">300.00</label>
+                        <label id="product6"> Casio Men's Oversized Dive Style Watch </label>
+                        <img src="watch.webp " style="width:500px;height: 300px;" class="img-thumbnail"/><br>
+                        <label for="product6" id="price6">3,500.00</label>
                         <input type="number" class="form-control" id="qty6" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4">
@@ -73,12 +73,12 @@
     </div>
       <script>
         var products = [
-        { id: 1, name: "Miami", price: 270.00 },
-        { id: 2, name: "charlotte", price: 370.00 },
-        { id: 3, name: "Spurs", price: 350.00 },
-        { id: 4, name: "Goldern state warriors", price: 370.00 },
-        { id: 5, name: "Lakers", price: 500.00 },
-        { id: 6, name: "Dallas", price: 300.00 },
+        { id: 1, name: "Casio MTP-V001D-7B Silver Stainless", price: 1,200.00 },
+        { id: 2, name: "Casio MTP-V001GL-1B Brown Leather", price: 1,200.00 },
+        { id: 3, name: "Casio MTP-V001L-7B Black Leather", price: 1,000.00 },
+        { id: 4, name: "Casio Digital Illuminator", price: 2,000.00 },
+        { id: 5, name: "Casio Analog Silver Metal", price: 3,000.00 },
+        { id: 6, name: "Casio Men's Oversized Dive Style Watch", price: 3,500.00 },
     ];
     
     
