--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
      <br><br>
        <div class="card text-center">
       <div class="card-footer text-body-secondary">
-        <div class="badge text-bg-info">Info</div>
+        <div class="badge text-bg-info">dela cuadra</div>
 
       
     </div>
