--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
             <div class="container">
             <div class="row">
                 <div class="col-4 text-center">
-                    <label id="product1"> Casio MTP-V001D-7B Silver Stainless </label>
+                    <label id="product1"> Casio MTP V001D 7B Silver Stainless </label>
                     <img src="watch1.jpg " style="width: 500px;height: 300px;" class="img-thumbnail"/><br>
                     <label for="product1" id="price1">200.00</label>
                     <input type="number" class="form-control" id="qty1" placeholder="Enter quantity"/><br>
                 </div>
                 <div class="col-4 text-center">
-                        <label id="product2">Casio MTP-V001GL-1B Brown Leather </label>
+                        <label id="product2">Casio MTP V001GL 1B Brown Leather </label>
                         <img src="watch2.jpg" style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product2" id="price2">200.00</label>
                         <input type="number" class="form-control" id="qty2" placeholder="Enter quantity"/><br>
                 </div>
                <div class="col-4 text-center">
-                        <label id="product3"> Casio MTP-V001L-7B Black Leather   </label>
+                        <label id="product3"> Casio MTP V001L 7B Black Leather   </label>
                         <img src="watch3.jpg " style="width:500px;height: 300px;" class="img-thumbnail"/><br>
                         <label for="product3" id="price3">100.00</label>
                         <input type="number" class="form-control" id="qty3" placeholder="Enter quantity"/><br>
@@ -73,9 +73,9 @@
     </div>
       <script>
         var products = [
-        { id: 1, name: "Casio MTP-V001D-7B Silver Stainless", price: 200.00 },
-        { id: 2, name: "Casio MTP-V001GL-1B Brown Leather", price: 200.00 },
-        { id: 3, name: "Casio MTP-V001L-7B Black Leather", price: 100.00 },
+        { id: 1, name: "Casio MTP V001D 7B Silver Stainless", price: 200.00 },
+        { id: 2, name: "Casio MTP V001GL 1B Brown Leather", price: 200.00 },
+        { id: 3, name: "Casio MTP V001L 7B Black Leather", price: 100.00 },
         { id: 4, name: "Casio Digital Illuminator", price: 200.00 },
         { id: 5, name: "Casio Analog Silver Metal", price: 300.00 },
         { id: 6, name: "Casio Men's Oversized Dive Style Watch", price: 3,500.00 },
