--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
-               <h2> Watch Store </h2>
+               <h2> Casio Watch Store </h2>
                 <hr class="hr" />
                 </div>
             </div>
